# PSC

./: .gitignore  CMakeLists.txt  LICENSE  Packaging.cmake  README.md  azure-pipelines.yml
src/: Application.cpp  Application.h  ChannelsTrackingWidget.cpp  ChannelsTrackingWidget.h  ClickableLabel.cpp  ClickableLabel.h  Commons.h  Communication.cpp  Communication.h  CommunicationMetrics.h  ControlDebounce.cpp  ControlDebounce.h  Debounce.cpp  Debounce.h  DebugInfo.h  DeviceStatus.cpp  DeviceStatus.h  DialWidget.cpp  DialWidget.h  DisplayWidget.cpp  Global.h  Label.cpp  Label.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OutputSwitch.cpp  OutputSwitch.h  ProtectionWidget.cpp  ProtectionWidget.h  Protocol.h  Settings.cpp  Settings.h  SpinBoxDebounce.cpp  config.h.in  main.cpp  resources.qrc
src/assets/: .gitignore  PS-Management.desktop.in  README.md  power-supply.icns  ps-management.desktop.in  windows.rc  windows.rc.in
src/devices/: Commons.h  Device.h  Factory.cpp  Factory.h  Messages.h  Protocol.h  UTP3303C.h  UTP3305C.h
src/protocol/: BaseSCPI.h  Commons.h  Factory.cpp  Factory.h  Interface.h  Messages.h  UTP3303C.h  UTP3305C.h
src/widgets/: ChannelsTrackingWidget.cpp  ChannelsTrackingWidget.h  ClickableLabel.h  DialWidget.h  DisplayWidget.cpp  DisplayWidget.h  OutputSwitch.cpp  OutputSwitch.h  PresetWidget.cpp  PresetWidget.h  ProtectionControlWidget.cpp  ProtectionControlWidget.h  SpinBoxDebounce.h  StatusBar.cpp  StatusBar.h
